--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
+    "@types/expo": "^33.0.1",
     "@types/faker": "^4.1.8",
+    "axios": "^0.19.0",
+    "base-64": "^0.1.0",
     "expo": "^35.0.0",
     "faker": "^4.1.0",
     "react": "16.8.3",
