--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
+    "spotify-web-api-js": "^1.2.0",
     "typescript-tslint-plugin": "^0.5.5"
   },
   "devDependencies": {
