fixed extra padding on title bar

--- a/app.json
+++ b/app.json
@@ -37,6 +37,9 @@
               "apiKey": "AIzaSyAHnm2KoWjehZ9aWBPvntAAIZeYzQIxEvM"
           }
       }
+    },
+    "androidStatusBar":{
+      "hidden": true
     }
   }
 }
