--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
+    "@react-native-community/datetimepicker": "^2.3.2",
     "@types/expo": "^33.0.1",
     "@types/faker": "^4.1.8",
     "axios": "^0.19.0",
