--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.6",
+    "@expo/vector-icons": "^10.0.0",
     "@react-native-community/datetimepicker": "^2.3.2",
     "@types/expo": "^33.0.1",
     "@types/faker": "^4.1.8",
     "axios": "^0.19.0",
     "base-64": "^0.1.0",
-    "expo": "^35.0.0",
+    "expo": "^37.0.0",
     "faker": "^4.1.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-maps": "~0.25.0",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "0.26.1",
     "react-native-modals": "^0.19.9",
-    "react-native-reanimated": "~1.2.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
@@ -32,11 +32,11 @@
     "typescript-tslint-plugin": "^0.5.5"
   },
   "devDependencies": {
-    "@types/react": "^16.8.23",
-    "@types/react-native": "^0.57.65",
+    "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.22",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
-    "babel-preset-expo": "^7.1.0",
+    "babel-preset-expo": "^8.1.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -44,7 +44,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.8.3"
   },
   "private": true
 }
