--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "expo": "^35.0.0",
+    "expo-image-picker": "~7.0.0",
+    "expo-permissions": "~7.0.0",
     "faker": "^4.1.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
