--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
+    "socket.io-client": "2.1.1",
     "spotify-web-api-js": "^1.2.0",
     "typescript-tslint-plugin": "^0.5.5"
   },
@@ -38,6 +39,7 @@
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.57.65",
     "@types/react-native-datepicker": "^1.7.0",
+    "@types/socket.io-client": "^1.4.32",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
     "babel-preset-expo": "^7.1.0",
